--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,5 +9,5 @@ a[href] { color: #45512c; }
 
 footer { display: none; }
 
-.buttons { background: #629b34; }
+.buttons { background-color: #629b34; }
 
