--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,5 +9,12 @@ a[href] { color: #45512c; }
 
 footer { display: none; }
 
-header > ul > li { background: #629b34; }
+header > ul > li { 
+  background: #629b34;
+  box-shadow: inset 0px 1px 1px 0 rgba(33,2,38, 1);
+}
+
+header > ul > li:hover {
+  background: #13001D;
+} 
 
