--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ header > ul > li:hover {
 } 
 
 section:first-of-type {
-  background-image: url("../img/draft.png")
+  background-image: url("../img/draft.png");
   background-repeat: repeat;
 }
 
