--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@ header > ul > li:hover {
 
 section:first-of-type {
   background-image: url("../img/draft.png");
+  background-size: 30%;
   background-repeat: repeat;
 }
 
